# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake  FindOpus.cmake  FindPulseAudio.cmake  FindX11.cmake  FindXFixes.cmake  FindXTest.cmake  FindXext.cmake
src/: AppManager.cpp  AppManager.h  CMakeLists.txt  Image.h  NetworkAbstract.class.h  NetworkFullTcp.class.cpp  NetworkFullTcp.class.h  config.h  encoder_ffmpeg.c  encoder_ffmpeg.h  fifo.cpp  fifo.h  fifo.hpp  keysym_converter.c  keysym_converter.h  main.cpp  main.hpp  network.cpp  network.hpp  server.cpp  xdisplay.c  xdisplay.h
src/input/: CMakeLists.txt  SD2_X11_keysym_converter.c  SD2_X11_keysym_converter.h  SRD_Keyboard.cpp  SRD_Keyboard.h  SRD_Mouse.cpp  SRD_Mouse.h  SRD_Touchscreen.cpp  SRD_Touchscreen.h  Uinput.cpp  Uinput.h  Uinput_Keyboard.cpp  Uinput_Keyboard.h  X11FakeInput.cpp  X11FakeInput.h
src/network/: CMakeLists.txt  Network.cpp  Network.h  NetworkReceiveThread.cpp  NetworkReceiveThread.h  NetworkSendThread.cpp  NetworkSendThread.h
src/sound/: CMakeLists.txt  OpusEncoder.cpp  OpusEncoder.h  OpusEncoderManager.cpp  OpusEncoderManager.h  PulseAudioCapture.cpp  PulseAudioCapture.h  SoundManager.cpp  SoundManager.h
src/videoCapture/: CMakeLists.txt  VideoCapture.cpp  VideoCapture.h
src/videoCapture/videoEncoder/: AbstractEncoder.cpp  AbstractEncoder.h  CMakeLists.txt  NVENC_Encoder.cpp  NVENC_Encoder.h  SoftwareEncoder.cpp  SoftwareEncoder.h  TJPEG_Encoder.cpp  TJPEG_Encoder.h
src/videoCapture/videoGrab/: CMakeLists.txt  FrameBufferGrab.cpp  FrameBufferGrab.h  X11Grab.cpp  X11Grab.h
src/videoGrab/: FrameBufferGrab.cpp  FrameBufferGrab.h
